--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,15 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment files
+.env
+.env.*
+backend/.env
+backend/.env.*
+supabase/.env
+supabase/.env.*
+*.env.local
+*.env.development.local
+*.env.production.local
+*.env.test.local
