--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "seed": "node scripts/seedDatabase.js",
-    "seed:superuser": "node scripts/createSuperUser.js"
+    "seed:superuser": "node scripts/createSuperUser.js",
+    "seed:40metros": "node scripts/seedFortyMetros.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -27,7 +28,8 @@
     "jspdf": "^3.0.3",
     "mongoose": "^8.0.3",
     "react-i18next": "^15.7.3",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "twilio": "^5.2.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
