--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "chartjs-adapter-date-fns": "^3.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
@@ -28,8 +29,8 @@
     "jspdf": "^3.0.3",
     "mongoose": "^8.0.3",
     "react-i18next": "^15.7.3",
-    "xlsx": "^0.18.5",
-    "twilio": "^5.2.4"
+    "twilio": "^5.2.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
