--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:full": "concurrently -n FRONTEND,BACKEND -c green,blue \"vite\" \"cd backend && npm run dev\"",
+  "dev:full": "concurrently -n FRONTEND,BACKEND -c green,blue \"vite\" \"npm run dev --prefix backend\"",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "build:prod": "vite build --mode production",
