--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-  "dev:full": "concurrently -n FRONTEND,BACKEND -c green,blue \"vite\" \"npm run dev --prefix backend\"",
+    "dev:full": "concurrently -n FRONTEND,BACKEND -c green,blue \"vite\" \"npm run dev --prefix backend\"",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "build:prod": "vite build --mode production",
@@ -56,6 +56,7 @@
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.17.2",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
