--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "seed": "node scripts/seedDatabase.js",
+    "seed:maintenance": "node scripts/seedMaintenanceLogs.js",
     "seed:superuser": "node scripts/createSuperUser.js",
     "seed:40metros": "node scripts/seedFortyMetros.js"
   },
